ok big changes as i missed a few commits, classes added to merch image row and gallery row with text-align:center; added, this fixes the responsive design problems of not centering when screen size is smaller. footer col's changed to col-12 col-md-4 instead of just col-4, this now stacks the footer making it much more presentable on xs and sm screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,10 @@ body {
     border: solid 2px white;
 }
 
+.merch-row {
+    text-align: center;
+}
+
 /* Band Wiki */
 
 .band-wiki-section {
@@ -287,4 +291,8 @@ footer {
 .gallery-image {
     width: 100%;
     height: auto;  
+}
+
+.gallery-row {
+    text-align: center;
 }
